k8s/manifests/00-namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echokey-prod
  labels:
    app.kubernetes.io/name: echokey
    app.kubernetes.io/instance: echokey-prod
    app.kubernetes.io/managed-by: kubectl
    environment: prod
