k8s/manifests/41-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: echokey-dev
  labels:
    app.kubernetes.io/name: echokey
    app.kubernetes.io/instance: echokey-dev
    app.kubernetes.io/component: api
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: echokey
    app.kubernetes.io/instance: echokey-dev
    app.kubernetes.io/component: api
  ports:
    - name: api
      port: 8000
      targetPort: http
      protocol: TCP
